# augury

./: .gitignore  ICHING_INTEGRATION_SPEC.md  LICENSE  README.md  pyproject.toml  setup.py
skills/hermes/: SKILL.md
src/augury/: __init__.py  art.py  cards.py  cli.py  config.py  discord.py  engine.py
src/augury/systems/iching/: app.py  cli.py
tests/: test_cli.py  test_config.py
